# ab-sdlc-agent-ai-output

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CHANGES_SUMMARY.md  CI_CD_IMPLEMENTATION.md  CI_CD_SETUP_SUMMARY.md  CI_SETUP_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVOPS_IMPLEMENTATION_SUMMARY.md  DOCKER_NETWORKING.md  Dockerfile  FRONTEND_AGENT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOCAL_TESTING.md  LOGO_REPLACEMENT_INSTRUCTIONS.md  Makefile  QUICKSTART.md  README.md  README_THEME.md  README_UPDATE.txt  REVIEW_FEEDBACK_RESOLUTION.md  SECURITY.md  SECURITY_REVIEW_ADDRESSED.md  SECURITY_VERIFICATION.md  TESTING.md  acceptance_test.sh  app.py  cypress.config.js  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  (+17 more)
.github/: CI_QUICK_REFERENCE.md  PULL_REQUEST_TEMPLATE.md  QUICK_START_CI.md  README-CI.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  lint.yml  manual-deploy-test.yml  pr-checks.yml  pytest.yml  security.yml  test.yml
.hypothesis/constants/: 4ae0df39477a11b6  5f829090ecaee929
app/: __init__.py  config.py  main.py
app/api/: __init__.py  router.py  routes.py
app/core/: __init__.py  config.py
app/middleware/: cors.py
app/routes/: root.py
app/schemas/: hello.py
backend/: .bandit  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  AC_COMPLIANCE.md  BACKEND_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  Dockerfile  Makefile  PRODUCTION_READINESS.md  QUICK_START.md  README.md  README_TESTS.md  TESTING.md  TESTING_GUIDE.md  TEST_README.md  __init__.py  app.py  conftest.py  main.py  models.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_ac_tests.sh  run_tests.bat  run_tests.sh  task_repository.py  test_app.py  test_main.py  test_requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py  models.py  routes.py
backend/fastapi/: Dockerfile  main.py
backend/tests/: README.md  __init__.py  conftest.py  test_ac_compliance.py  test_api.py  test_application.py  test_bulk_delete.py  test_color_theme.py  test_cors.py  (+9 more)
frontend/: .dockerignore  .env.development  .env.example  .env.production  .eslintrc.cjs  .eslintrc.json  .gitignore  .npmrc  CHANGELOG.md  Dockerfile  Dockerfile.dev  FEATURES.md  FRONTEND_IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  Makefile  README.md  TESTING.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  TEST_FIXES_SUMMARY.md  TEST_GUIDE.md  TEST_SUMMARY.md  app.js  app.test.js  config.js  env-to-config.sh  error-styles.css  eslint.config.js  index.html  jest.setup.js  nginx.conf  package-lock.json  package.json  script.js  script.test.js  server.js  style.css  styles.css  test-setup.js  test.html  (+3 more)
src/: __init__.py  app.py  config.py  exceptions.py  hello_world.py  logger.py  main.py  middleware.py  routes.py  schemas.py  services.py
tests/: __init__.py  conftest.py  requirements.txt  test_api.py  test_app.py  test_backend.py  test_blue_theme.py  test_config.py  test_docker_integration.py  test_health.py  test_hello_world.py  test_howdy.py  test_integration.py  test_main.py  test_root.py  test_services.py  test_tasks.py
(+144 files in other folders)
