[project]
name = "ab-sdlc-agent-ai-backend"
version = "1.0.0"
description = "A simple FastAPI Hello World application"
authors = [
    {name = "AB SDLC Agent Team", email = "team@ab-sdlc.local"},
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
]

[project.urls]
Homepage = "https://github.com/nadavyeramazon/ab-sdlc-agent-ai-backend"
Repository = "https://github.com/nadavyeramazon/ab-sdlc-agent-ai-backend"
Issues = "https://github.com/nadavyeramazon/ab-sdlc-agent-ai-backend/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
